# daemon_prototyping

./: .gitignore  CMakeLists.txt  README.md
src/: create_pidfile.c  daemon_test1.c  daemon_test2.c  double_fork.c  fork_and_terminate.c  fork_once.c  fork_twice.c  is_running.c  read_pidfile.c  simple_getpid.c  write_pid.c
